# backend/Services/UserService/UserService.API/DTOs/Auth/RefreshTokenDto.cs
@@ -1,0 +1,6 @@
+namespace UserService.API.DTOs.Auth;
+
+public class RefreshTokenDto(string token)
+{
+    public string Token { get; set; } = token;
+}
