# backend/Services/UserService/UserService.API/DTOs/Auth/UserLoginDto.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace UserService.API.DTOs.Auth;
+
+public class UserLoginDto(string username, string password)
+{
+    [Required]
+    public string Username { get; } = username;
+    [Required]
+    public string Password { get; } = password;
+}
