# backend/Services/UserService/UserService.Domain/Entities/UserLogin.cs
@@ -1,0 +1,7 @@
+namespace UserService.Domain.Entities;
+
+public class UserLogin(string username, string password)
+{
+    public string Username { get; set; } = username;
+    public string Password { get; set; } = password;
+}
